# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "pylity"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLV3"
readme = "README.md"
repository = "https://github.com/USER_NAME/REPO"
keywords = []
packages = [{ include = "pylity" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pylint = "^2.17.0"
isort = "^5.12.0"
coverage = "^7.2.2"
tox = "^4.4.7"
tox-gh-actions = "^3.1.0"

[tool.poetry.scripts]
my-script = "pylity.main:say_hello"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
